fixed some errors

--- a/templates/consultar_csv.html
+++ b/templates/consultar_csv.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}
-    ETL | csv consultas
+    ETL | consultas
 {% endblock %}
 
 {% block content %}
@@ -9,7 +9,7 @@
 		<div class="row limpieza">
 			<div class="col-12">
 				<section class="headline">
-					<h1 class="title margen_botton_titulo">Consultas csv</h1>
+					<h1 class="title margen_botton_titulo">Consultas</h1>
 				</section>
 			</div>
 			<div class="col-lg-9">
