--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="http://localhost:5000/">Inicio</a></li>
-            <li><a href="http://localhost:5000/csv">Aplicación</a></li>
+            <li><a href="http://localhost:5000/etl">Aplicación</a></li>
           </ul>
         </div>
       </div>
