--- a/templates/limpiar.html
+++ b/templates/limpiar.html
@@ -59,7 +59,7 @@
 										<p> Realizar está acción eliminara la siguiente cantida de registros por columna: </p>
 									</div>
 									<div class="col-md-2">
-										<p><a href="{{url_for('limpiar_csv', action = 1, eliminar = True)}}" class="btn btn-danger btn-sm" role="button">Borrar Registros</a></p>
+										<p><a href="{{url_for('limpiar', action = 1, eliminar = True)}}" class="btn btn-danger btn-sm" role="button">Borrar Registros</a></p>
 									</div>
 								</div>
 								<br>
@@ -101,7 +101,7 @@
 									{% for columna in dataframe.columns %}
 										<div class="row">
 										  	<div class="col-lg-12">
-										  		<form class="md-form" action="{{url_for('limpiar_csv', action = 2)}}" method="POST" id="{{columna}}">
+										  		<form class="md-form" action="{{url_for('limpiar', action = 2)}}" method="POST" id="{{columna}}">
 										    	<div class="input-group">
 										    		<span class="input-group-addon">{{columna}}</span>
 										    		<input type="hidden" name="columna" value="{{columna}}">
@@ -139,7 +139,7 @@
 						</div>
 						<div class="panel-body">
 							{% if len(dataframe) > 0 %}
-								<form class="md-form" action="{{url_for('limpiar_csv', action = 3)}}" method="POST" id="datos_nueva_dataset">
+								<form class="md-form" action="{{url_for('limpiar', action = 3)}}" method="POST" id="datos_nueva_dataset">
 									<div class="row">
 										<div class="col-md-9">
 											<p>Seleccione las columnas con las que quiere crear el nuevo conjunto de datos</p>
@@ -191,7 +191,7 @@
 						</div>
 						<div class="panel-body">
 							{% if len(dataframe.columns) > 0 %}
-								<form class="md-form" action="{{url_for('limpiar_csv', action = 4)}}" method="POST" id="datos_eliminar_col">
+								<form class="md-form" action="{{url_for('limpiar', action = 4)}}" method="POST" id="datos_eliminar_col">
 									<div class="row">
 										<div class="col-md-8">
 											<p> Realizar está acción eliminara la siguiente columna: </p>
@@ -225,7 +225,7 @@
 						</div>
 						<div class="panel-body">
 							{% if len(dataframe.columns) > 0 %}
-								<form class="md-form" action="{{url_for('limpiar_csv', action = 5)}}" method="POST" id="datos_renombrar_columns">
+								<form class="md-form" action="{{url_for('limpiar', action = 5)}}" method="POST" id="datos_renombrar_columns">
 									<div class="row">
 										<div class="col-md-8">
 											<p> Se renombra la columna indicada por el nombre introducido en el campo de texto </p>
@@ -260,23 +260,20 @@
 					<section>
 					<h3 class="sin_margenes">Opciones de limpieza</h3><br>
 					<div class="list-group">
-						<a href="{{url_for('limpiar_csv')}}" class="list-group-item {% if vista == 1 %} active {% endif %}">
+						<a href="{{url_for('limpiar')}}" class="list-group-item {% if vista == 1 %} active {% endif %}">
 						Inicio limpieza
 						</a>
-						<a href="{{url_for('limpiar_csv',action = 1)}}" class="list-group-item {% if vista == 2 %} active {% endif %}">
+						<a href="{{url_for('limpiar',action = 1)}}" class="list-group-item {% if vista == 2 %} active {% endif %}">
 						Operaciones rapidas
 						</a>
-						<a href="{{url_for('limpiar_csv',action = 2)}}" class="list-group-item {% if vista == 3 %} active {% endif %}">Seleccionar columna y cambiar campos vacios por un dato ingresado</a>
-						<a href="{{url_for('limpiar_csv',action = 3)}}" class="list-group-item {% if vista == 4 %} active {% endif %}">Seleccionar columnas y crear nuevo conjunto de datos</a>
-						<a href="{{url_for('limpiar_csv',action = 4)}}" class="list-group-item {% if vista == 5 %} active {% endif %}">Eliminar columnas</a>
-						<a href="{{url_for('limpiar_csv',action = 5)}}" class="list-group-item {% if vista == 6 %} active {% endif %}">Renombrar columnas</a>
+						<a href="{{url_for('limpiar',action = 2)}}" class="list-group-item {% if vista == 3 %} active {% endif %}">Seleccionar columna y cambiar campos vacios por un dato ingresado</a>
+						<a href="{{url_for('limpiar',action = 3)}}" class="list-group-item {% if vista == 4 %} active {% endif %}">Seleccionar columnas y crear nuevo conjunto de datos</a>
+						<a href="{{url_for('limpiar',action = 4)}}" class="list-group-item {% if vista == 5 %} active {% endif %}">Eliminar columnas</a>
+						<a href="{{url_for('limpiar',action = 5)}}" class="list-group-item {% if vista == 6 %} active {% endif %}">Renombrar columnas</a>
 					</div>
 					</section>
 				</aside>
 				<ul class="pager">
-					<!--
-					<li><a href="{{url_for('limpiar_csv')}}">Inicio Limpieza</a></li>
-				-->
 					<li><a href="{{url_for('action')}}">Home </a></li>
 				</ul>
 			</div>
