--- a/templates/graficas.html
+++ b/templates/graficas.html
@@ -17,7 +17,7 @@
 				{% if vista == 1%}
 					{% if len(dataframe) > 0 %}
 					    <div class="panel panel-primary">
-						    <div class="panel-heading">{{session['data_csv']}} - (<span>{{len(dataframe)}} Registros)</span></div>
+						    <div class="panel-heading">{{session['data_user']}} - (<span>{{len(dataframe)}} Registros)</span></div>
 						    <div class="panel-body">
 						        <div class="row ">
                       <div class="table-responsive">
