--- a/templates/consultar.html
+++ b/templates/consultar.html
@@ -17,7 +17,7 @@
 				{% if vista == 1%}
 					{% if len(dataframe.columns) > 0 %}
 					    <div class="panel panel-primary">
-						    <div class="panel-heading">{{session['data_csv']}}</div>
+						    <div class="panel-heading">{{session['data_user']}}</div>
 						    <div class="panel-body">
 						        <h2>
 						            Cantidad de Columnas
