--- a/templates/limpiar.html
+++ b/templates/limpiar.html
@@ -19,7 +19,7 @@
 						{% if len(dataframe.columns) > 0 %}
 						    <div class="panel panel-info" id="panel_cantidad_datos">
 						      <!-- Default panel contents -->
-						      <div class="panel-heading">{{session['data_csv']}}</div>
+						      <div class="panel-heading">{{session['data_user']}}</div>
 
 						      <!-- Table -->
 						      <table class="table" id="tabla_cantidad_registros">
