--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
 
+{% block active_navber_inicio %} 
+active
+{% endblock %}
+
+{% block active_navber_app %} 
+{% endblock %}
+
 {% block title %}
     ETL
 {% endblock %}
