--- a/templates/action.html
+++ b/templates/action.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 
+{% block active_navber_inicio %} 
+
+{% endblock %}
+
+{% block active_navber_app %} 
+active
+{% endblock %}
+
 {% block title %}
     ETL | Aplicación 
 {% endblock %}
